[package]
name = "cjdns"
version = "0.2.0"
description = "Admin API implementation of cjdns"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/cjdns-rs"
categories = ["api-bindings"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/cjdns-rs" }

[dependencies]
bencode = "0.1.16"
rustc-serialize = "0.3"
