[package]
name = "cjdns"
version = "0.2.0"
description = "Admin API implementation of cjdns"
authors = ["kpcyrd <git@rxv.cc>"]
license = "LGPL-3.0"
repository = "https://github.com/kpcyrd/cjdns-rs"
categories = ["api-bindings"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/cjdns-rs" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_bencode = "0.2"
